--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^4.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "debounce": "^1.2.0",
     "express": "^4.16.3",
     "mongoose": "^5.9.2",
     "prop-types": "^15.7.2",
